--- a/Simulateur incendie.cbp
+++ b/Simulateur incendie.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="TP1 HPC AKLI RAYANE SID" />
+		<Option title="Simulateur incendie" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/TP1 HPC AKLI RAYANE SID" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/Simulateur incendie" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -16,7 +16,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/TP1 HPC AKLI RAYANE SID" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/Simulateur incendie" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
